<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareEmitterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/image_or_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/share_image"
            android:textOn="@string/share_video"/>

        <Button
            android:text="@string/device_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onDeviceInfoClick"/>
    </LinearLayout>
</FrameLayout>
